k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: parallax-dashboard
spec:
  selector: {app: parallax-dashboard}
  ports:
  - {port: 80, targetPort: 8000}
  type: ClusterIP
